--- a/Snake/index.html
+++ b/Snake/index.html
@@ -29,7 +29,7 @@
             <button class="restart">New Game</button>
             <button class="pauza">Pauze Game</button>
         </footer>
-        <script src="app.js"></script>
+        <script src="app.js" type="module"></script>
     </body>
 
     </html>
