Solved bug - snake reverse move.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <button class="newGame"></button>
             </div>
         -->
-            <button class="start">Start Game</button>
+            <button class="start">Start Game &#9654;</button>
             <button class="restart">New Game</button>
-            <button class="pauza">Pauze Game</button>
+            <button class="pauza">Pauze Game &#10074; &#10074;</button>
         </footer>
         <script src="app.js" type="module"></script>
     </body>
